# Trading-App

./: CMakeLists.txt  README.md  run.py
data/agent/: agent_1.json  agent_10.json  agent_2.json  agent_3.json  agent_4.json  agent_5.json  agent_6.json  agent_7.json  agent_8.json  agent_9.json
data/market/: cac40.csv
src/: CMakeLists.txt
src/agent/: CMakeLists.txt  agent.cpp  agent.hpp  agentconnexionprocess.cpp  agentconnexionprocess.hpp  exchangeProcess.cpp  exchangeProcess.hpp  main.cpp  quoteprocess.cpp  quoteprocess.hpp
src/lib/sockpp/: CMakeLists.txt
src/lib/sockpp/include/sockpp/: acceptor.h  can_address.h  can_frame.h  can_socket.h  connector.h  datagram_socket.h  error.h  inet6_address.h  inet_address.h  raw_socket.h  result.h  sock_address.h  socket.h  stream_socket.h  tcp6_acceptor.h  tcp6_connector.h  tcp6_socket.h  tcp_acceptor.h  tcp_connector.h  tcp_socket.h  udp6_socket.h  udp_socket.h  unix_acceptor.h  unix_address.h  unix_connector.h  unix_dgram_socket.h  unix_stream_socket.h
src/lib/sockpp/include/sockpp/tls/: mbedtls_error.h  mbedtls_socket.h  openssl_certificate.h  openssl_connector.h  openssl_context.h  openssl_error.h  openssl_socket.h
src/lib/sockpp/src/: CMakeLists.txt  acceptor.cpp  connector.cpp  datagram_socket.cpp  error.cpp  inet6_address.cpp  inet_address.cpp  socket.cpp  stream_socket.cpp
src/lib/sockpp/src/linux/: can_address.cpp  can_socket.cpp
src/lib/sockpp/src/tls/: mbedtls_context.cpp  mbedtls_error.cpp  mbedtls_socket.cpp  openssl_certificate.cpp  openssl_context.cpp  openssl_error.cpp  openssl_socket.cpp
src/lib/sockpp/src/unix/: unix_address.cpp
src/market/: CMakeLists.txt  main.cpp  market.cpp  market.hpp  marketProcess.cpp  marketProcess.h  marketProcess.hpp
